# matmul

./: README.md
c/: ompalompa.c  summa.c
cpp/: CMakeLists.txt
cpp/src/: main.cpp  mandel.cpp  mandel.hpp
cpp/src/.nvim/: nvim-dap.lua
rust/: .gitignore  Cargo.toml
rust/benches/x86/avx/f32/: mm4.rs
rust/benches/x86/avx/i32/: mm16.rs  mm4.rs  mm8.rs
rust/src/: helpers.rs  lib.rs  main.rs  matrix.rs  unopt.rs
rust/src/matmul/: mod.rs
rust/src/matmul/x86/: mod.rs
rust/src/matmul/x86/avx/: f32.rs  i32.rs
rust/tests/: f32.rs  i32.rs
